--- a/problem1.html
+++ b/problem1.html
@@ -1227,7 +1227,7 @@
             const customer12ArrivalTime = customers.length >= 12 ? customers[11].arrivalTime : 'N/A';
             const customer15ServiceStartTime = customers.length >= 15 ? customers[14].serviceBegins : 'N/A';
 
-            // Display results
+            // Display results/output
             displayResults(customers, {
                 avgWaitingTime,
                 totalTimeInSystem,
