--- a/Question-2.html
+++ b/Question-2.html
@@ -273,7 +273,7 @@
             margin-top: 5px;
         }
 
-        .RS{
+        .RS {
             display: none;
         }
 
@@ -359,7 +359,11 @@
                         <input type="number" id="randomSeed" placeholder="Leave empty for random">
                         <div class="help-text">For reproducible results</div>
                     </div>
-                    <div></div>
+                    <div>
+                        <label>Customer Number for Time in System</label>
+                        <input type="number" id="customerTimeInSystem" value="8" min="1" placeholder="8">
+                        <div class="help-text">Which customer's time in system to display (Card #4)</div>
+                    </div>
                 </div>
             </div>
 
@@ -768,7 +772,12 @@
                 maxQueueLength = Math.max(maxQueueLength, queueLength);
             }
 
-            const customer8TimeInSystem = customers.length >= 8 ? customers[7].timeInSystem : 'N/A';
+            // Get dynamic customer number for time in system (Card #4)
+            const customerNumForTimeInSystem = parseInt(document.getElementById('customerTimeInSystem').value) || 8;
+            const customerTimeInSystem = (customerNumForTimeInSystem > 0 && customerNumForTimeInSystem <= customers.length)
+                ? customers[customerNumForTimeInSystem - 1].timeInSystem
+                : 'N/A';
+
             const customer10WaitingTime = customers.length >= 10 ? customers[9].waitingTime : 'N/A';
             const customer12ArrivalTime = customers.length >= 12 ? customers[11].arrivalTime : 'N/A';
             const customer15ServiceStartTime = customers.length >= 15 ? customers[14].serviceBegins : 'N/A';
@@ -778,7 +787,8 @@
                 avgWaitingTime,
                 totalTimeInSystem,
                 maxQueueLength,
-                customer8TimeInSystem,
+                customerTimeInSystem,
+                customerNumForTimeInSystem,
                 customer10WaitingTime,
                 customer12ArrivalTime,
                 customer15ServiceStartTime
@@ -806,9 +816,9 @@
                     <div class="unit">customers</div>
                 </div>
                 <div class="card">
-                    <h3>4. Customer 8 Time in System</h3>
-                    <div class="value">${stats.customer8TimeInSystem}</div>
-                    <div class="unit">${stats.customer8TimeInSystem !== 'N/A' ? 'minutes' : ''}</div>
+                    <h3>4. Customer ${stats.customerNumForTimeInSystem} Time in System</h3>
+                    <div class="value">${stats.customerTimeInSystem}</div>
+                    <div class="unit">${stats.customerTimeInSystem !== 'N/A' ? 'minutes' : ''}</div>
                 </div>
                 <div class="card">
                     <h3>5. Customer 10 Waiting Time</h3>
@@ -849,7 +859,8 @@
             `;
 
             customers.forEach(c => {
-                const rowClass = (c.id === 8 || c.id === 10 || c.id === 12 || c.id === 15) ? 'highlight' : '';
+                // Highlight the dynamic customer number along with static ones
+                const rowClass = (c.id === stats.customerNumForTimeInSystem || c.id === 10 || c.id === 12 || c.id === 15) ? 'highlight' : '';
                 tableHTML += `
                     <tr class="${rowClass}">
                         <td>${c.id}</td>
